--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   "dependencies": {
     "bower": "^1.7.7",
     "gulp": "^3.9.1",
+    "gulp-bump": "^1.0.0",
     "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-sourcemaps": "^1.6.0",
     "qunitjs": "^1.22.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-htmlmin": "^1.3.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uisrinivas/jquerydevelopement.git"
