--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "gulp-babel": "^6.1.2",
-    "gulp-htmlmin": "^1.3.0"
+    "gulp-eslint": "^2.0.0",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-jshint": "^2.0.0",
+    "jshint": "^2.9.1"
   },
   "repository": {
     "type": "git",
