--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "gulp-babel": "^6.1.2",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-connect": "^3.1.0",
     "gulp-eslint": "^2.0.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-jshint": "^2.0.0",
